# dmsmail

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  auth.ts  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml
api/: auth.py  crud.py  database.py  dmsmail.py  models.py  routers.py  schemas.py  send_emails.py
app/: TODO.txt  layout.tsx  page.tsx
app/dashboard/: layout.tsx
app/dashboard/policies/: page.tsx
app/dashboard/policies/[id]/edit/: page.tsx
app/dashboard/policies/create/: page.tsx
app/lib/: actions.ts  data.ts  definitions.ts
app/login/: page.tsx
app/signup/: page.tsx
app/ui/: button.tsx  dms-logo.tsx  fonts.ts  login-form.tsx  search.tsx  signup-form.tsx  skeletons.tsx
app/ui/dashboard/: nav-links.tsx  sidenav.tsx
app/ui/policies/: attachment-list.tsx  breadcrumbs.tsx  buttons.tsx  create-form.tsx  edit-form.tsx  pagination.tsx  status.tsx  table.tsx  timer.tsx
cypress/e2e/: loginSpec.cy.ts  policyCreateSpec.cy.ts
cypress/support/: commands.ts
dmsmail-site/: package-lock.json  package.json  pnpm-lock.yaml
dmsmail-site/app/: page.tsx
dmsmail-site/app/ui/: dms-logo.tsx  fonts.ts  login-form.tsx
dmsmail-site/app/ui/dashboard/: sidenav.tsx
dmsmail-site/components/: policy.ts  policyItem.tsx
dmsmail-site/pages/: _app.tsx  index.tsx
test/api/integration/: test_auth_endpoints.py  test_no_auth_endpoints.py
test/integration/: test_endpoints.py
