[project]
name = "dmsmail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.30.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "requests>=2.32.3",
]
